--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,10 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="edu.fandm.enovak.updatetimingcollector">
 
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/> <!-- To save to log file -->
-    <uses-permission android:name="android.permission.READ_PHONE_STATE"/> <!-- To read IMEI number -->
-    <uses-permission android:name="android.permission.INTERNET"/> <!-- To transmit log file to back end -->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" /> <!-- To save to log file -->
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" /> <!-- To read IMEI number -->
+    <uses-permission android:name="android.permission.INTERNET" />
 
+    <!-- To transmit log file to back end -->
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -16,6 +17,7 @@
         <activity android:name=".Main">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -25,16 +27,18 @@
             android:name=".LogBcastReceiver"
             android:exported="true">
             <intent-filter>
-                <data android:scheme="package"/>
+                <data android:scheme="package" />
+
                 <action android:name="android.intent.action.PACKAGE_ADDED" />
                 <action android:name="android.intent.action.PACKAGE_REPLACED" />
-                <action android:name="android.intent.action.PACKAGE_REMOVED"/>
+                <action android:name="android.intent.action.PACKAGE_REMOVED" />
             </intent-filter>
-
             <intent-filter>
                 <action android:name="android.intent.action.AIRPLANE_MODE" />
             </intent-filter>
         </receiver>
+
+        <activity android:name=".PermissionDetails"></activity>
     </application>
 
 </manifest>
