INITIAL PLAY STORE RELEASE

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
+    signingConfigs {
+        zip_keystore {
+            keyAlias 'zip'
+            storeFile file('/Volumes/sandisk/android/zip_keystore')
+        }
+    }
     compileSdkVersion 26
     defaultConfig {
         applicationId "edu.fandm.enovak.updatetimingcollector"
@@ -19,7 +25,7 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     testImplementation 'junit:junit:4.12'
