First attempt at improvements to make this work on version 8.0 (and above). These changes are necessary because we can no longer catch the events in the broadcast receiver that we need to.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -60,6 +60,12 @@
         </receiver>
 
         <activity android:name=".StatusActivity"></activity>
+
+        <service
+            android:name=".LoggingJobSchedulerService"
+            android:label="Update Collector Logging service"
+            android:permission="android.permission.BIND_JOB_SERVICE" >
+        </service>
     </application>
 
 </manifest>
